--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
             }
         }
 
+        @media only screen and (min-width:768px) {
+            .question {
+                width: 80%;
+                margin: 0 auto;
+            }
+        }
+
         .carousel-item img {
             filter: brightness(40%);
         }
@@ -456,7 +463,126 @@
         </section>
         <!-- Feedback section end -->
 
-
+        <!-- Frequently Asked Questions Start -->
+        <section class="container mb-5">
+            <div class="text-center">
+                <h1>Frequently Asked Questions</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                    <br>
+                    looking at its layout.
+                </p>
+            </div>
+            <article>
+                <div class="accordion question" id="accordionExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingOne">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                <h5>What is the difference between Flex and Flexbox?</h5>
+                            </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <strong>Flex:</strong>
+                                <p class="text-muted">
+                                    The CSS Flexbox offers a one-dimensional layout. It is helpful in
+                                    allocating and
+                                    aligning the space among items in a container (made of grids). It works with all
+                                    kinds
+                                    of display devices and screen sizes.
+                                </p>
+                                <strong>Grid: </strong>
+                                <p class="text-muted">
+                                    CSS Grid Layout, is a two-dimensional grid-based layout system
+                                    with rows and columns, making it easier to design web pages without having to use
+                                    floats
+                                    and positioning. Like tables, grid layout allow us to align elements into columns
+                                    and
+                                    rows.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingTwo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                <h5>Tailwind Css And Bootstrap Difference</h5>
+                            </button>
+                        </h2>
+                        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <p class="text-muted">
+                                    <strong>Tailwind css </strong> was initially developed by Adam Wathan, and the first
+                                    version was released back on the 1st of November, 2017. Tailwind CSS is a
+                                    utility-first
+                                    CSS framework for building custom user interfaces rapidly and efficiently. It is an
+                                    inline styling used to achieve a sleek interface without writing code for your own
+                                    CSS.
+                                    Tailwind CSS offers customizability and flexibility to transform the appearance and
+                                    feel
+                                    of the elements. Tailwind CSS is not the first utility-first CSS library, but it is
+                                    one
+                                    of the most popular and light ones. It is a highly customizable, low-level CSS
+                                    framework, and it provides all the building blocks the developer needs to build a
+                                    fantastic interface for any website.
+                                </p>
+                                <p class="text-muted">
+                                    <strong>Bootstarp </strong>was developed by Mark Otto and Jacob Thorton during an
+                                    internal competition at Twitter in August 2011. It is an open-source framework that
+                                    is used to design responsive websites better, faster, and easier. It is a
+                                    beginner-friendly and the most popular open-source framework that includes HTML,
+                                    CSS, and JavaScript. Bootstrap can be used to create web applications with any
+                                    server-side Technology like Java, PHP, etc., and its responsive design allows
+                                    platforms like Mobile phones, tablets, and computers. Bootstrap contains CSS and
+                                    JavaScript-based design templates for typography, forms, buttons, navigation, icons,
+                                    and other interface components. It is based on object-oriented CSS. Bootstrap helps
+                                    to design and develop website templates quickly.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingThree">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                <h5>What is a CSS Box Model?</h5>
+                            </button>
+                        </h2>
+                        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <p class="text-muted">The CSS box model is a container that contains multiple properties
+                                    including borders, margin, padding, and the content itself. It is used to create the
+                                    design and layout of web pages. It can be used as a toolkit for customizing the
+                                    layout of different elements. The web browser renders every element as a rectangular
+                                    box according to the CSS box model.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingFour">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                <h5>What is a Semantic Tag?</h5>
+                            </button>
+                        </h2>
+                        <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <p class="text-muted">The HTML semantics refers to the tags that provide meaning to an
+                                    HTML page rather than just presentation. It makes HTML more comprehensible by better
+                                    defining the different sections and layout of web pages. This article will focus on
+                                    ‘What is Semantics in HTML’</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </section>
+        <!-- Frequently Asked Questions End -->
     </main>
     <!-- <footer>
         <section>
